BHV-17171: Inputs are now properly aligned when in RTL mode. Directionality remains correct.
Enyo-DCO-1.1-Signed-off-by: Blake Stephens <blake.stephens@lge.com>

--- a/css/Input.less
+++ b/css/Input.less
@@ -32,6 +32,10 @@
    color: @moon-input-font-color;
 }
 
+.enyo-locale-right-to-left .moon-input {
+	text-align: right;
+}
+
 .enyo-locale-non-latin {
 	// Languages with combining accent characters
 	&.enyo-locale-th, // Thai - Test Chars: ฟิ้ไััุุ
